--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <title>Bikundo.co | Coming Soon</title>
     
     <link href="css/bootstrap.css" rel="stylesheet" />
-	<link href="css/style.css" rel="stylesheet" />    
+	<link href="css/style.css" rel="stylesheet" />  
+    <link rel="icon" href="images/favicon.png" type="image" sizes="16x16">  
     
     <!--     Fonts     -->
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css" rel="stylesheet">
